ICU-6951 Merging generics support changes from the work branch.
X-SVN-Rev: 26059